# puffin

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md
common/: CMakeLists.txt
common/include/puffin/common/: char_sequence.hpp  function_traits.hpp  noncopyable.hpp  optional.hpp  string_literal.hpp
common/samples/: sample_path_literal.cpp
include/puffin/: events.hpp  standard.hpp  uri.hpp  webkit.hpp
include/puffin/events/: CMakeLists.txt  event.hpp  event_bus.hpp  handler.hpp
include/puffin/logging/: CMakeLists.txt  logging.hpp
include/puffin/rest/: router.hpp
include/puffin/standard/: CMakeLists.txt  call_traits.hpp  function_traits.hpp  integer_sequence.hpp  path_literal.hpp  tuple.hpp
include/puffin/uri/: CMakeLists.txt  uri.hpp  uri_exceptions.hpp  uri_parser.hpp
include/puffin/webkit/: CMakeLists.txt
modules/standard/: CMakeLists.txt
modules/standard/include/puffin/standard/: function_traits.hpp  integer_sequence.hpp
samples/: CMakeLists.txt  sample_event_bus.cpp  sample_logging.cpp  sample_path_literal.cpp  sample_rest_router.cpp
tests/: CMakeLists.txt  tests_event_bus.cpp  tests_main.cpp  tests_uri.cpp
